# lox

./: Cargo.toml  README.md  build.rs  profile.json
.github/workflows/: rust.yml
benches/loxc/: main.rs
benches/loxi/: main.rs
benches/suite/: main.rs
src/: lib.rs
src/analysis/: mod.rs  vars.rs
src/ast/: expr.rs  mod.rs  parser.rs  printer.rs  stmt.rs  value.rs
src/cmdline/: mod.rs
src/compiler/: chunk.rs  class.rs  comp.rs  fun.rs  mod.rs  oprunner.rs  ops.rs  value.rs
src/core/: errors.rs  loc.rs  mod.rs  output.rs
src/interpreter/: class.rs  env.rs  fun.rs  inter.rs  mod.rs  value.rs  visitor.rs
src/lexer/: mod.rs  scanner.rs  token.rs
src/vm/: alloc.rs  callstack.rs  chunk.rs  class.rs  frame.rs  fun.rs  gc.rs  gcpool.rs  machine.rs  mod.rs  ops.rs  stack.rs  stringpool.rs  upvalue.rs  value.rs
tests/: loxc.rs  loxc.rs.skip  loxi.rs
tests/data/: classes.lox  fib_fn.lox  functions.lox  if_conditionals.lox
tests/lang/: main.rs
tests/lang/class/: empty.lox
tests/lang/function/: print.lox
tests/lang/method/: print_bound_method.lox
tests/lang/operator/: add_bool_nil.lox  add_bool_num.lox  add_nil_nil.lox  add_num_nil.lox  equals_method.lox  greater_nonnum_num.lox  greater_num_nonnum.lox  greater_or_equal_nonnum_num.lox  greater_or_equal_num_nonnum.lox  less_nonnum_num.lox  less_num_nonnum.lox  less_or_equal_nonnum_num.lox  less_or_equal_num_nonnum.lox
tests/lang/while/: closure_in_body.lox
