[package]
name = "lox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
regex = "1"
walkdir = "2.3"

[build-dependencies]
glob = "0.3.1"

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
ahash = "0.8.11"
